apps/mycroft/coordinator-uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycroft-coordinator
  namespace: mycroft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycroft-coordinator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mycroft-coordinator
    spec:
      serviceAccountName: mycroft-coordinator
      containers:
        - name: coordinator
          image: amerenda/mycroft:coordinator-sha-da6b504
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
